--- a/css/main.css
+++ b/css/main.css
@@ -89,9 +89,29 @@ a {
   -webkit-transition: color var(--global-animation);
   transition: color var(--global-animation);
 }
-.header__link .header__link--active {
+
+.header__link--active {
   color: var(--link-hover-text-color);
 }
+
+.header__link:not(.header__link--active)::after {
+  position: absolute;
+  left: 0;
+  bottom: -1px;
+  content: "";
+  display: inline-block;
+  width: 100%;
+  height: 4px;
+  border-radius: 2px;
+  -webkit-transform: scaleX(0);
+          transform: scaleX(0);
+  -webkit-transition: opacity var(--global-animation), -webkit-transform var(--global-animation);
+  transition: opacity var(--global-animation), -webkit-transform var(--global-animation);
+  transition: transform var(--global-animation), opacity var(--global-animation);
+  transition: transform var(--global-animation), opacity var(--global-animation), -webkit-transform var(--global-animation);
+  background-color: var(--link-hover-text-color);
+}
+
 .header__link::after {
   position: absolute;
   opacity: 1;
@@ -104,6 +124,7 @@ a {
   border-radius: 2px;
   background-color: var(--link-hover-text-color);
 }
+
 .header__link:hover::after {
   -webkit-transform: scaleX(1);
           transform: scaleX(1);
@@ -132,24 +153,6 @@ a {
   display: flex;
   gap: 50px;
   margin-left: auto;
-}
-
-.header__link:not(.header__link--active)::after {
-  position: absolute;
-  left: 0;
-  bottom: -1px;
-  content: "";
-  display: inline-block;
-  width: 100%;
-  height: 4px;
-  border-radius: 2px;
-  -webkit-transform: scaleX(0);
-          transform: scaleX(0);
-  -webkit-transition: opacity var(--global-animation), -webkit-transform var(--global-animation);
-  transition: opacity var(--global-animation), -webkit-transform var(--global-animation);
-  transition: transform var(--global-animation), opacity var(--global-animation);
-  transition: transform var(--global-animation), opacity var(--global-animation), -webkit-transform var(--global-animation);
-  background-color: var(--link-hover-text-color);
 }
 
 .contacts {
