--- a/sass/components/_footer-form.scss
+++ b/sass/components/_footer-form.scss
@@ -8,7 +8,21 @@
 
 .footer__form {
     display: flex;
-    margin-left: 93px;
+    flex-direction: column;
+    justify-content: center;
+    gap: 20px;
+    @media screen and (max-width:1199px) {
+        max-width: 450px;
+        margin: 0 auto;
+    }
+
+    @media screen and (min-width:1200px) {
+        display: flex;
+        flex-direction: row;
+        margin-left: auto;
+        gap: 12px;
+        margin-left: 93px;
+    }
 }
 
 .footer__title {
@@ -23,8 +37,7 @@
 }
 // FOOTer INPUT
 .footer__input {
-    padding-left: 16px;
-    width: 358px;
+    width: 100%;
     height: 50px;
     outline: transparent;
     border-radius: 4px;
@@ -32,7 +45,12 @@
     background-color: transparent;
     color: var(--footer__address-hover);
     transition: border var(--global-animation), filter var(--global-animation);
-
+@media screen and (min-width:1200px) {
+    padding-left: 16px;
+        width: 358px;
+        
+    
+}
 
 
     &::placeholder {
@@ -48,7 +66,6 @@
 }
 // FOOTER BTN
 .footer__btn {
-    margin-left: 12px;
     height: 50px;
     width: 200px;
     display: flex;
@@ -60,7 +77,9 @@
     border: none;
     background-color: var(--link-hover-text-color);
     transition: background-color var(--global-animation);
-
+@media screen and (min-width:1200px) {
+        margin-left: 12px;
+}
 
 &:hover {
     background-color: #188ce8;
