--- a/sass/components/_nav.scss
+++ b/sass/components/_nav.scss
@@ -1,3 +1,10 @@
+// .header__nav{
+//     display: none;
+//     @media screen and (min-width:768px) {
+//         display: flex;
+        
+//     }
+// }
 .header__link {
     position: relative;
     display: block;
