--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -7,5 +7,10 @@
 &__container {
     display: flex;
     align-items: center;
+    // @media screen and (min-width:768px) {
+    //     display: flex;
+    //     align-items: center;
+    // }
 }
 }
+
