--- a/sass/layout/_regular-custm.scss
+++ b/sass/layout/_regular-custm.scss
@@ -1,12 +1,23 @@
 .regular-custm__logos {
-    display: flex;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 30px;}
+  .regular-custm__logos-item {
+    height: 96px;
+    width: calc(50% - 15px);
+    
 
-    gap: 30px;
-
-// links
-.regular-custm__logos-link {
-    width: 170px;
-    height: 92px;
+    @media screen and (min-width: 768px) {
+      width: 226px;
+    }
+    @media screen and (min-width: 1200px) {
+        width: 170px;
+    }
+  }
+  // links
+  .regular-custm__logos-link {
+    width: 100%;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -14,21 +25,20 @@
     border-radius: 4px;
     transition: border var(--global-animation), fill var(--global-animation);
 
+    &:hover,
+    &:focus {
+      border: 1px solid var(--link-hover-text-color);
+    }
 
-&:hover,
-&:focus {
-    border: 1px solid var(--link-hover-text-color);
-}
-
-&:hover .regular-custm__logos-svg,
-&:focus .regular-custm__logos-svg {
-    fill: var(--link-hover-text-color);
-}
-}
-.regular-custm__logos-svg {
+    &:hover .regular-custm__logos-svg,
+    &:focus .regular-custm__logos-svg {
+      fill: var(--link-hover-text-color);
+    }
+  }
+  .regular-custm__logos-svg {
     transition: fill var(--global-animation);
     fill: #afb1b8;
     width: 106px;
     height: 60px;
-}
-}
+  }
+
