--- a/sass/layout/_task-section.scss
+++ b/sass/layout/_task-section.scss
@@ -1,17 +1,23 @@
 // TASK SECTION -----
 .task-section {
     padding-top: 0;
-
+@media screen and (max-width:1199px) {
+    display: none;
+    
+}
 
 
 &__item {
     position: relative;
 }
-
+&__img{
+    max-width: 100%;
+    height: auto;
+}
 &__wrapper {
     position: absolute;
     bottom: 0;
-    left: 0;
+    display: flex;
     padding: 27px 10px;
     width: 100%;
     background-color: rgba(47, 48, 58, 0.8);
